Remove unused imports, add images cropping

--- a/notebooks/classic_ml_train.ipynb
+++ b/notebooks/classic_ml_train.ipynb
@@ -39,20 +39,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2\n",
     "import numpy as np\n",
     "\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.metrics import recall_score, accuracy_score, f1_score, precision_score, make_scorer\n",
+    "from sklearn.metrics import (\n",
+    "    recall_score,\n",
+    "    accuracy_score,\n",
+    "    f1_score,\n",
+    "    precision_score,\n",
+    "    make_scorer\n",
+    ")\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from imblearn.under_sampling import RandomUnderSampler, NearMiss\n",
     "\n",
-    "from scripts.prepare_data import create_dataset_from_directory"
+    "from scripts.prepare_data import create_dataset_from_directory, crop_images"
    ]
   },
   {
@@ -90,6 +93,11 @@
     }
    ],
    "source": [
+    "crop_images(source_dir=\"../images/train/img\", destination_dir=\"../cropped_images/train/img\")\n",
+    "crop_images(source_dir=\"../images/train/mask\", destination_dir=\"../cropped_images/train/mask\")\n",
+    "crop_images(source_dir=\"../images/test/img\", destination_dir=\"../cropped_images/test/img\")\n",
+    "crop_images(source_dir=\"../images/test/mask\", destination_dir=\"../cropped_images/test/mask\")\n",
+    "\n",
     "X_train, y_train = create_dataset_from_directory(dir=\"../cropped_images/train\",\n",
     "                                                 channel=1,\n",
     "                                                 shape=None,\n",
@@ -240,6 +248,7 @@
     "\n",
     "scoring = {\n",
     "    'f1': make_scorer(f1_score),\n",
+    "    'accuracy': make_scorer(accuracy_score),\n",
     "    'precision': make_scorer(precision_score),\n",
     "    'recall': make_scorer(recall_score),\n",
     "    'specificity': make_scorer(specificity)\n",
