--- a/notebooks/filters.ipynb
+++ b/notebooks/filters.ipynb
@@ -134,6 +134,8 @@
     "\n",
     "    ret, extracted_vessels_without_noise_thresh = cv2.threshold(extracted_vessels_without_noise, 20, 255, cv2.THRESH_BINARY) #threshold\n",
     "\n",
+    "    # todo numpy where to make binary mask\n",
+    "\n",
     "    result_img = extracted_vessels_without_noise_thresh\n",
     "\n",
     "    return result_img\n",
